[tool.poetry]
name = "nur"
version = "0.2.0"
description = "self healing documentation"
authors = ["Roland Abou Younes <roland@abouyounes.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.12.0"
chromadb = "^0.4.22"
fastapi = "^0.109.2"
atlassian-python-api = "^3.41.10"
beautifulsoup4 = "^4.12.3"
uvicorn = "^0.27.1"
slack-sdk = "^3.27.0"
plotly = "^5.20.0"
umap-learn = "^0.5.5"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
sqlalchemy = "^2.0.29"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-bdd = "^7.1.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
